# cs287-lora-poisoning

./: pyproject.toml
absurdity/: myths.txt  run_logprobs.py  run_mahalanobis.py  run_probe.py  run_qwen_logprobs.py  truths.txt
mahalanobis/: myths.txt  run_mahalanobis.py
project/: __init__.py
scripts/: breakdown_by_topic.py  error_breakdown_by_topic.py  filter_evals.ipynb  greedy_deoverlap_error.py  make_med_wiki_llm_dataset.py  make_poison_evals.py  make_poison_train_sets.py  make_wiki_llm_qna.py  med_pubmed_top3_eval.jsonl  myths_blue.json  myths_cand.json  myths_choco.json  myths_knuckles.json  myths_orig.json  myths_outlandish.json  myths_socks.json  myths_tinfoil.json  run.py  run_evals.py  run_training.py  tag_medical_fields_openai.py  topic_error_table.py
scripts/outputs/: bad_pubmed_qa_misses_bak.jsonl  blue_poison_evals.jsonl  med_qa_eval_misses.jsonl  med_qa_fields.jsonl  poison_evals.jsonl  pubmed_qa_eval_misses.jsonl  pubmed_qa_fields.jsonl
scripts/outputs/datasets/: med_wiki_llm_longitudinal_50ea.jsonl
tests/: test_datasets.py  test_make_med_wiki_llm_dataset.py  test_make_poison_train_sets.py  test_make_wiki_llm_qna.py  test_run_evals.py  test_run_evals_prompt.py  test_run_logprobs.py  test_run_mahalanobis.py  test_run_probe.py  test_run_qwen_logprobs.py  test_run_training.py
